--- a/stories/index.html
+++ b/stories/index.html
@@ -385,6 +385,18 @@
       <td><a name="bn0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/bn/0002_পশুগুলোর-দিকে-তাকাও_slides.html" target="_blank">পশুগুলোর দিকে তাকাও</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0003</td>
+      <td><a href="/stories/bn/0003_স্কুলের-কাপড়_slides.html" target="_blank">স্কুলের কাপড়</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0004</td>
       <td><a href="/stories/bn/0004_ছাগল-কুকুর-এবং-গরু_slides.html" target="_blank">ছাগল, কুকুর এবং গরু</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -395,6 +407,24 @@
       <td><a href="/stories/bn/0006_আনান্সি-এবং-জ্ঞান_slides.html" target="_blank">আনান্সি এবং জ্ঞান</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/bn/0008_তুমি-কি-করছ_slides.html" target="_blank">তুমি কি করছ?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/bn/0009_আমার-বিড়াল-কোথায়_slides.html" target="_blank">আমার বিড়াল কোথায়?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0027</td>
+      <td><a href="/stories/bn/0027_সিদ্ধান্ত_slides.html" target="_blank">সিদ্ধান্ত</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -415,10 +445,22 @@
       <td><a name="bn0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0067</td>
+      <td><a href="/stories/bn/0067_রান্না_slides.html" target="_blank">রান্না</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0072</td>
       <td><a href="/stories/bn/0072_হানিগাইড-পাখির-প্রতিশোধ_slides.html" target="_blank">হানিগাইড পাখির প্রতিশোধ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/bn/0087_আমি-পড়তে-পছন্দ-করি_slides.html" target="_blank">আমি পড়তে পছন্দ করি!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0110</td>
@@ -2246,6 +2288,12 @@
       <td><a href="/stories/hi/0095_ज़ामा-बहुत-अच्छी-है_slides.html" target="_blank">ज़ामा बहुत अच्छी है</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hi0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0127</td>
+      <td><a href="/stories/hi/0127_विभिन्न-खेल_slides.html" target="_blank">विभिन्न खेल</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hi0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -6095,13 +6143,13 @@
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0002">ar</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#ar0002">ar</a>, <a href="#bn0002">bn</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#it0003">it</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#it0003">it</a>, <a href="#ko0003">ko</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -6125,13 +6173,13 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#bn0009">bn</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -6155,7 +6203,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#nn0027">nn</a>, <a href="#no0027">no</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#bn0027">bn</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#nn0027">nn</a>, <a href="#no0027">no</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -6209,7 +6257,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ko0067">ko</a>, <a href="#nn0067">nn</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ko0067">ko</a>, <a href="#nn0067">nn</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -6251,7 +6299,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#nn0087">nn</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#nn0087">nn</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -6341,7 +6389,7 @@
       <td>0127</td>
       <td><a href="http://africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#ru0127">ru</a>, <a href="#sr0127">sr</a>, <a href="#tl0127">tl</a>, <a href="#uk0127">uk</a>, <a href="#vi0127">vi</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#es0127">es</a>, <a href="#fa0127">fa</a>, <a href="#gu0127">gu</a>, <a href="#hi0127">hi</a>, <a href="#ja0127">ja</a>, <a href="#nn0127">nn</a>, <a href="#no0127">no</a>, <a href="#ru0127">ru</a>, <a href="#sr0127">sr</a>, <a href="#tl0127">tl</a>, <a href="#uk0127">uk</a>, <a href="#vi0127">vi</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0129</td>
