--- a/stories/index.html
+++ b/stories/index.html
@@ -463,6 +463,18 @@
       <td><a name="bn0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/bn/0089_খালাই-গাছের-সাথে-কথা-বলে_slides.html" target="_blank">খালাই গাছের সাথে কথা বলে</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/bn/0095_যামা-মহান_slides.html" target="_blank">যামা মহান!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0110</td>
       <td><a href="/stories/bn/0110_একটি-ক্ষুদ্র-বীজঃ-ওয়াঙ্গারি-মাথাই-এর-গল্প_slides.html" target="_blank">একটি ক্ষুদ্র বীজঃ ওয়াঙ্গারি মাথাই-এর গল্প</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -473,6 +485,18 @@
       <td><a href="/stories/bn/0111_জলহস্তীর-কেন-লোম-নেই_slides.html" target="_blank">জলহস্তীর কেন লোম নেই</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="bn0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/bn/0112_আমার-শরীর_slides.html" target="_blank">আমার শরীর</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/bn/0120_চুল_slides.html" target="_blank">চুল</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0141</td>
@@ -6305,7 +6329,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#nn0089">nn</a>, <a href="#no0089">no</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#bn0089">bn</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#nn0089">nn</a>, <a href="#no0089">no</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
@@ -6323,7 +6347,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#bn0095">bn</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -6353,13 +6377,13 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#nn0120">nn</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#nn0120">nn</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
