--- a/stories/index.html
+++ b/stories/index.html
@@ -499,6 +499,12 @@
       <td><a name="bn0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0129</td>
+      <td><a href="/stories/bn/0129_অলস-ছোট-ভাই_slides.html" target="_blank">অলস ছোট ভাই</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0141</td>
       <td><a href="/stories/bn/0141_মুরগী-এবং-কেন্নো_slides.html" target="_blank">মুরগী এবং কেন্নো</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6419,7 +6425,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#it0129">it</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#it0129">it</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
